# memory_management_tutorial

./: .gitignore  CMakeLists.txt  README.md
include/: bootlib.h  exercise.h  snekstack.h
src/: bootlib.c  exercise.c  main.cpp  snekstack.c
